fix: overflow hidden index.html

--- a/src/wolfverelst.css
+++ b/src/wolfverelst.css
@@ -124,7 +124,7 @@ a {
     padding: 18px 40px;
     position: relative;
     margin-left: auto;
-    left: 30px;
+    left: 10px;
     cursor: pointer;
 }
 
